--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My Resume</title>
   </head>
   <body>
+    <img src="./Inka Early.png" width="150" />
     <h1>Inka Early Walandow</h1>
     <ol>
       <li>
@@ -65,7 +66,7 @@
             >https://github.com/inkawalandow</a
           >
         </li>
-        <li>LinkdIn: Inka Early</li>
+        <li>LinkdIn: <a></a>Inka Early</li>
         <li>
           Portfolio Website:
           <a href="https://github.com/yourusername/secrets-app"
@@ -73,6 +74,13 @@
           >
         </li>
       </ul>
+      <li><h2>
+        <a href="./hobbies.html">Hobbies</a>
+      </h2></li>
     </ol>
-  </body>
+    <footer>
+      <small>
+        Copyright © 2025 Inka's History Archives. All Rights Reserved.
+      </small>
+    </footer>
 </html>
